# xcurl-wpr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-doc.sh  build.sh  local-ci.sh
cmake/: Coverage.cmake  Dependencies.cmake
crawlers/: CMakeLists.txt  api_crawler.cpp  robot_crawler.cpp
docs/: Doxyfile.in  build.md  cli.md  design.md  docker.md  tests.md
include/: xcurl
include/cwpr/: xcurl.h  xcurl_global.h
include/fio/: file_mgr.h
include/json/: json_hdr.h
include/platform/: cache.h  env_mgr.h
include/ret/: response_hdr.h
include/topology/: utils  xcgen  xcwpr
include/tpp/: response_hdr.tpp  xcurl_ctx.tpp
include/utils/: nc.h  ncnm.h
include/xcgen/: xcgen_concepts.h  xcurl_ctx.h
include/xcwpr/: xcurl.h  xcurl_global.h  xcwpr_concepts.h
include/xjson/: json_hdr.h
rc/: sample.json
src/: CMakeLists.txt
src/crawler/: CMakeLists.txt  api_crawler.cpp
src/cwpr/: CMakeLists.txt  xcurl.cpp  xcurl_global.cpp
src/cwpr/test/: CMakeLists.txt  test_xcurl.cpp  test_xcurl_global.cpp
src/platform/: CMakeLists.txt  cache.cpp  env_mgr.cpp
src/platform/test/: CMakeLists.txt  test_cache.cpp  test_env_mgr.cpp
src/test/: CMakeLists.txt  test_utils.cpp
src/xcwpr/: CMakeLists.txt  xcurl.cpp  xcurl_global.cpp
src/xcwpr/test/: CMakeLists.txt  test_xcurl.cpp  test_xcurl_global.cpp
src/xjson/: CMakeLists.txt  json_hdr.cpp
src/xjson/test/: CMakeLists.txt  test_json_hdr.cpp
test/: CMakeLists.txt  test_fio.cpp  test_platform.cpp  test_response_hdr.cpp  test_ret.cpp  test_utils.cpp  test_xcgen.cpp
tools/: README.md
